feat: added outgoing payment handler
